signup/login adjustments

--- a/login.html
+++ b/login.html
@@ -51,6 +51,7 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
+      defer
     ></script>
   </head>
 
@@ -79,19 +80,21 @@
                     <div class="form-outline form-white mb-4">
                       <input
                         type="email"
-                        id="typeEmailX"
+                        id="emailLogin"
                         class="form-control form-control-lg"
+                        required
                       />
-                      <label class="form-label" for="typeEmailX">Email</label>
+                      <label class="form-label" for="emailLogin">Email</label>
                     </div>
 
                     <div class="form-outline form-white mb-4">
                       <input
                         type="password"
-                        id="typePasswordX"
+                        id="passwordLogin"
                         class="form-control form-control-lg"
+                        required
                       />
-                      <label class="form-label" for="typePasswordX"
+                      <label class="form-label" for="passwordlogin"
                         >Lösenord</label
                       >
                     </div>
