--- a/signup.html
+++ b/signup.html
@@ -51,6 +51,7 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
+      defer
     ></script>
   </head>
 
@@ -62,66 +63,106 @@
       alt="raining in the background"
     />
     <main>
-      <section class="form_container">
+      <section class="signup_form">
         <div class="container py-5 h-150">
           <div
             class="row d-flex justify-content-center align-items-center h-100"
           >
-            <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+            <div class="col-12 col-md-8 col-lg-5 col-xl-5">
               <div class="card bg-dark text-white" style="border-radius: 1rem">
                 <div class="card-body p-5 text-center">
                   <div class="mb-md-5 mt-md-4 pb-5">
                     <h2 class="fw-bold mb-2 text-uppercase">Registrera</h2>
-                    <p class="text-white-50 mb-5">
+                    <p class="text-white-40 mb-5">
                       Skriv in dina uppgifter här för att skapa ett konto.
                     </p>
 
-                    <div class="form-outline form-white mb-4">
-                      <input
-                        type="text"
-                        id="typeEmailX"
-                        class="form-control form-control-lg"
-                      />
-                      <label class="form-label" for="typeEmailX">Förnamn</label>
-                    </div>
+                    <form id="signupForm">
+                      <!-- Förnamn -->
+                      <div class="form-outline form-white mb-4">
+                        <input
+                          type="text"
+                          id="firstNameSignup"
+                          class="form-control form-control-lg"
+                          placeholder="Förnamn"
+                          required
+                        />
+                        <label class="form-label" for="firstNameSignup"
+                          >Förnamn</label
+                        >
+                      </div>
 
-                    <div class="form-outline form-white mb-4">
-                      <input
-                        type="text"
-                        id="typeEmailX"
-                        class="form-control form-control-lg"
-                      />
-                      <label class="form-label" for="typeEmailX"
-                        >Efternamn</label
+                      <!-- Efternamn -->
+                      <div class="form-outline form-white mb-4">
+                        <input
+                          type="text"
+                          id="lastNameSignup"
+                          class="form-control form-control-lg"
+                          placeholder="Efternamn"
+                          required
+                        />
+                        <label class="form-label" for="lastNameSignup"
+                          >Efternamn</label
+                        >
+                      </div>
+
+                      <!-- Email -->
+                      <div class="form-outline form-white mb-4">
+                        <input
+                          type="email"
+                          id="emailSignup"
+                          class="form-control form-control-lg"
+                          placeholder="name@example.com"
+                          required
+                        />
+                        <label class="form-label" for="emailSignup"
+                          >Email</label
+                        >
+                      </div>
+
+                      <!-- Telefon -->
+                      <div class="form-outline form-white mb-4">
+                        <input
+                          type="tel"
+                          id="phoneSignup"
+                          class="form-control form-control-lg"
+                          placeholder="0701234567"
+                          required
+                        />
+                        <label class="form-label" for="phone">Telefon</label>
+                      </div>
+
+                      <!-- Lösenord -->
+                      <div class="form-outline form-white mb-4">
+                        <input
+                          type="password"
+                          id="passwordSignup"
+                          pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[@#$%^&+=])(?=\S+$).{8,}"
+                          class="form-control form-control-lg"
+                          placeholder="Lösenord"
+                          required
+                        />
+                        <label class="form-label" for="password"
+                          >Lösenord</label
+                        >
+                        <div>
+                          <small
+                            id="passwordHelp"
+                            class="form-text text-white-50"
+                            >Lösenordet måste innehålla minst 8 tecken,
+                            inklusive en stor bokstav, en liten bokstav, en
+                            siffra och ett specialtecken.</small
+                          >
+                        </div>
+                      </div>
+
+                      <button
+                        class="btn btn-outline-light btn-lg px-5"
+                        type="submit"
                       >
-                    </div>
-
-                    <div class="form-outline form-white mb-4">
-                      <input
-                        type="email"
-                        id="typeEmailX"
-                        class="form-control form-control-lg"
-                      />
-                      <label class="form-label" for="typeEmailX">Email</label>
-                    </div>
-
-                    <div class="form-outline form-white mb-4">
-                      <input
-                        type="password"
-                        id="typePasswordX"
-                        class="form-control form-control-lg"
-                      />
-                      <label class="form-label" for="typePasswordX"
-                        >Lösenord</label
-                      >
-                    </div>
-
-                    <button
-                      class="btn btn-outline-light btn-lg px-5"
-                      type="submit"
-                    >
-                      Registrera!
-                    </button>
+                        Registrera!
+                      </button>
+                    </form>
 
                     <div
                       class="d-flex justify-content-center text-center mt-4 pt-1"
@@ -129,8 +170,8 @@
                       <a href="#!" class="text-white"
                         ><i class="fab fa-facebook-f fa-lg"></i
                       ></a>
-                      <a href="#!" class="text-white"
-                        ><i class="fab fa-twitter fa-lg mx-4 px-2"></i
+                      <a href="#!" class="text-white mx-4 px-2"
+                        ><i class="fab fa-twitter fa-lg"></i
                       ></a>
                       <a href="#!" class="text-white"
                         ><i class="fab fa-google fa-lg"></i
